# CSC122LAB_You_get_an_A

./: CMakeLists.txt  README.md  main.cpp
src/: assignment.cpp  assignment.hpp  gradebook.cpp  gradebook.hpp  id_maker.cpp  student.cpp  student.hpp
tests/: assignment_test.cpp  gradebook_test.cpp  student_test.cpp
