cmake_minimum_required(VERSION 3.24)

project(you_get_an_a)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

Include(FetchContent)

FetchContent_Declare(
  Catch2
  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
  GIT_TAG        v3.8.1
)

FetchContent_MakeAvailable(Catch2)
add_executable(assignment_test
        tests/assignment_test.cpp
        src/assignment.cpp)
add_executable(student_test
        tests/student_test.cpp
        src/student.cpp
        src/assignment.cpp)
add_executable(id_maker_test
        tests/id_maker_test.cpp
        src/id_maker.cpp)
add_executable(gradebook_test
        tests/gradebook_test.cpp
        src/gradebook.cpp
        src/student.cpp
        src/assignment.cpp)
add_executable(main main.cpp
        src/gradebook.cpp
        src/student.cpp
        src/assignment.cpp
        src/id_maker.cpp)
target_link_libraries(gradebook_test PRIVATE Catch2::Catch2WithMain)
target_link_libraries(id_maker_test PRIVATE Catch2::Catch2WithMain)
target_link_libraries(assignment_test PRIVATE Catch2::Catch2WithMain)
target_link_libraries(student_test PRIVATE Catch2::Catch2WithMain)